Refactor encoding